--- a/examples/SIPExamples/GetStartedPortAudio/GetStartedPortAudio/GetStartedPortAudio.csproj
+++ b/examples/SIPExamples/GetStartedPortAudio/GetStartedPortAudio/GetStartedPortAudio.csproj
@@ -11,13 +11,19 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.8" />
+    <PackageReference Include="portaudio" Version="0.19.1" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="SIPSorcery" Version="5.1.0" />
+    <PackageReference Include="SIPSorceryMedia.Windows" Version="0.0.32-pre" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ProjectCeilidh.PortAudio\ProjectCeilidh.PortAudio.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="bin\Debug\netcoreapp3.1\music.raw" />
   </ItemGroup>
 
 </Project>
