--- a/examples/SIPExamples/GetStartedPortAudio/ProjectCeilidh.PortAudio/ProjectCeilidh.PortAudio.csproj
+++ b/examples/SIPExamples/GetStartedPortAudio/ProjectCeilidh.PortAudio/ProjectCeilidh.PortAudio.csproj
@@ -18,4 +18,8 @@
   <ItemGroup Condition="'$(OS)' == 'Windows_NT'">
     <None Update="lib\*.dll" CopyToOutputDirectory="PreserveNewest" Link="%(Filename)%(Extension)" />
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="portaudio" Version="0.19.1" />
+  </ItemGroup>
 </Project>
